# rowbot

./: .env  .env.example  .gitignore  README.md  bot.py  pyproject.toml
src/plugins/: 30-30-repeater.py
src/plugins/good_fortune/: __init__.py  config.py  results
src/plugins/retweet/: __init__.py  config.py  model.py  twitter.py
src/plugins/retweet_v3/: README.md  __init__.py  config.py
